Fix column gap for other browsers

--- a/src/components/Controls.css
+++ b/src/components/Controls.css
@@ -1,6 +1,5 @@
 .Controls {
   display: flex;
-  column-gap: 20px;
   margin: 0 auto;
   max-width: 600px;
   width: 100%;
@@ -13,8 +12,21 @@
   flex: 1 0 auto;
 }
 
+.ControlsLeft {
+  margin-right: 10px;
+}
+.ControlsRight {
+  margin-left: 10px;
+}
+
 @media screen and (max-width: 700px) {
   .Controls {
     flex-direction: column;
+  }
+  .ControlsLeft {
+    margin-right: 0;
+  }
+  .ControlsRight {
+    margin-left: 0;
   }
 }
